# aquila

./: .dockerignore  Cargo.toml  Dockerfile  README.md  cli.dockerfile
crates/aquila_auth_github/: Cargo.toml  README.md
crates/aquila_auth_github/src/: lib.rs
crates/aquila_auth_mock/: Cargo.toml  README.md
crates/aquila_auth_mock/src/: lib.rs
crates/aquila_cli/: Cargo.toml  README.md
crates/aquila_cli/src/: main.rs
crates/aquila_client/: Cargo.toml  README.md
crates/aquila_client/src/: lib.rs
crates/aquila_compute_aws/: Cargo.toml
crates/aquila_compute_aws/src/: lib.rs
crates/aquila_compute_docker/: Cargo.toml
crates/aquila_compute_docker/src/: lib.rs
crates/aquila_core/: Cargo.toml  README.md
crates/aquila_core/src/: claims.rs  constants.rs  error.rs  job.rs  lib.rs  traits.rs
crates/aquila_fs/: Cargo.toml  README.md
crates/aquila_fs/src/: lib.rs
crates/aquila_opendal/: Cargo.toml  README.md
crates/aquila_opendal/src/: lib.rs
crates/aquila_s3/: Cargo.toml  README.md
crates/aquila_s3/src/: lib.rs
crates/aquila_server/: Cargo.toml  README.md
crates/aquila_server/src/: api.rs  auth.rs  jwt.rs  lib.rs  server.rs  services.rs  state.rs
crates/aquila_server/src/api/: asset.rs  auth.rs  error.rs  job.rs  manifest.rs  mod.rs
crates/bevy_aquila/: Cargo.toml  README.md
crates/bevy_aquila/src/: lib.rs
examples/: aws_server.rs  bevy.rs  docker_server.rs  github_auth_server.rs  opendal_server.rs  s3_server.rs  simple_client.rs  simple_server.rs
src/: lib.rs
