[package]
name = "aquila_compute_docker"
version = "0.7.0-rc.1"
edition = "2024"
description = "Docker compute backend for the aquila server"
license = "MIT OR Apache-2.0"
repository = "https://github.com/NicoZweifel/aquila"

[dependencies]
aquila_core = { path = "../aquila_core" ,version = "0.7.0-rc.1"}
bollard = "0.20.0"
futures = { workspace = true }
uuid = { workspace = true }
