[package]
name = "aquila_server"
version = "0.7.0-rc.3"
edition = "2024"
description = "Aquila server"
license = "MIT OR Apache-2.0"
repository = "https://github.com/NicoZweifel/aquila"

[dependencies]
aquila_core = { path = "../aquila_core" ,version = "0.7.0-rc.1"}
axum = { workspace = true, features = ["macros", "ws"] }
anyhow = {workspace=true}
bytes = {workspace=true}
hex = {workspace = true}
sha2 ={workspace = true}
serde_json = {workspace = true}
serde = {workspace = true}
futures = {workspace = true}
tokio = {workspace = true}
tracing ={workspace = true}
jsonwebtoken = { version = "10.2",features = ["rust_crypto"] }
tower-http = { version = "0.6", features = ["trace"] }
